<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaime.formulariodedatos.VerificacionActivity">


    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/verificacion"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_top"
        android:text="Nombre Completo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

    <TextView
        android:id="@+id/tv_fecha_nacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_top"
        android:text="@string/fecha_nacimiento"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />
    <TextView
        android:id="@+id/tv_fecha_nacimiento_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_fecha_nacimiento"
        app:layout_constraintTop_toTopOf="@+id/tv_fecha_nacimiento"
        android:layout_marginLeft="@dimen/top_margin"
        android:text="dd/mm/yyyy"/>

    <TextView
        android:id="@+id/tv_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_top"
        android:text="@string/telefono"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fecha_nacimiento" />
    <TextView
        android:id="@+id/tv_telefono_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_telefono"
        app:layout_constraintLeft_toRightOf="@id/tv_telefono"
        android:layout_marginLeft="@dimen/top_margin"
        android:text="555-5555"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_top"
        android:text="@string/email"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_telefono" />
    <TextView
        android:id="@+id/tv_email_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_email"
        app:layout_constraintLeft_toRightOf="@+id/tv_email"
        android:layout_marginLeft="@dimen/top_margin"
        android:text="mail@example.com"/>

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_top"
        android:text="@string/descripcion_verificar"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />
    <TextView
        android:id="@+id/tv_descripcion_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_descripcion"
        app:layout_constraintLeft_toRightOf="@+id/tv_descripcion"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/top_margin"
        android:text="Descripcion del contacto"/>

    <Button
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/editar"
        android:theme="@style/myRaisedButton"/>
</android.support.constraint.ConstraintLayout>
